--- a/restaurant/views/layout.hbs
+++ b/restaurant/views/layout.hbs
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-
+    {{#if login}}
+        <h1>Welcome {{user}} </h1>
     <h1>{{title}}</h1>
     <p>{{{body}}}</p>
   </body>
