--- a/login-example/views/login.hbs
+++ b/login-example/views/login.hbs
@@ -5,3 +5,4 @@
       <input type="password" name="password" placeholder="Password">
       <button type="submit">Login</button>
     </form>
+    <button action="/create_account">Create Account</button>
